feat(comparison,invoice,knowledge,shared): dual-block comparison result and idempotent document upsert — per-period TOU weighting and batch embedding
    - Extract ElectricityComparisonCalculator from CompareInvoiceUseCase; introduce
      ElectricityOfferBlock value object so comparison now produces two independent blocks
      (flatBlock for fixed-price offers, touBlock for TOU offers) instead of a single best offer
    - Restructure ElectricityComparisonResult to carry flatBlock/touBlock; update
      ComparisonResponseDTO to expose OfferBlockDTO for each; show touBlock only when user is
      on a flat rate (no point comparing TOU vs TOU)
    - Use actual per-period consumption (consumptionKwhP1/P2/P3) as TOU weighting when available;
      fall back to residential profile (30/40/30 for 3-period, 60/0/40 for 2-period)
    - Add GET /invoices/{id}/comparison to InvoiceController for on-demand comparison retrieval
    - Switch MarketOfferQueryAdapter from findAll() to findLatestPerTariff(); add JPQL correlated
      subquery in ElectricityRateJpaRepository to return only the most recent validFrom per
      (company, tariffName) pair
    - Extend ElectricityFields with consumptionKwhP1/P2/P3; propagate through InvoiceEntity
      (three new columns), InvoiceFieldsValidator (requireNonNegative guards) and
      LlmInvoiceFieldExtractor ELECTRICITY_INSTRUCTIONS; refine TOU disambiguation rules —
      equal prices across periods → flat rate; update few-shot ENDESA 2.0TD example
    - Switch KnowledgeRepository.save() → upsert(): IngestDocumentCommand now requires a
      caller-supplied docId; JpaKnowledgeRepository.upsert() deletes existing chunks and
      embeddings by docId before reinserting — seeded documents are idempotent across restarts
    - Batch chunk embeddings via embedAll/addAll; verify all rows in one ANY(?) query reusing
      the Spring transaction connection via DataSourceUtils.getConnection(); compensate
      embedding store writes (auto-commit, 